--- a/src/components/UserHeader/UserHeader.scss
+++ b/src/components/UserHeader/UserHeader.scss
@@ -7,10 +7,13 @@
 
 	.title {
 		font-size: 3em;
+
+		@media (max-width: 640px) {
+			font-size: 1.5em;
+		}
 	}
 
 	@media (max-width: 640px) {
-		flex-direction: column;
 		justify-content: center;
 		align-items: center;
 		padding: 10px;
@@ -18,21 +21,27 @@
 
 	img {
 		height: 200px;
-		width: 200px; 
+		width: 200px;
 		margin-right: 2em;
 		border-radius: 50%;
 		animation-delay: 3s;
 
 		@media (max-width: 640px) {
-			margin-right: 0em;
+			height: 100px;
+			width: 100px;
+			margin-right: 1em;
 			margin-bottom: 1em;
 		}
 	}
-	
+
 	.details {
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
+
+		@media (max-width: 640px) {
+			font-size: .8em;
+		}
 	}
 
 	.view-resume-link {
@@ -44,9 +53,11 @@
 		margin-top: 1rem;
 		background-color: rgba(46, 204, 64, 0.3);
 		transition: background-color 250ms ease;
+
 		&:hover {
 			background-color: #2ecc40;
 		}
+
 		svg {
 			fill: white;
 			margin-left: 8px;
@@ -66,8 +77,8 @@
 	from {
 		transform: scale(1)
 	}
+
 	to {
 		transform: scale(1.1)
 	}
 }
-  
