--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@ body {
   font-size: 1rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: rgba(0, 0, 0, .65)
 }
 
 // App styles
