--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,8 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,300,400,700);
+
 body {
   margin: 0;
-  font-family: "Roboto",
+  font-family: "Open Sans", "Roboto",
     "Helvetica",
     "Arial",
     sans-serif;
