--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,10 @@ body {
   color: rgba(0, 0, 0, .65)
 }
 
+a:link {
+  text-decoration: none;
+}
+
 // App styles
 @import "./pages/Pages";
 @import "./styles/app"
