--- a/src/pages/_Pages.scss
+++ b/src/pages/_Pages.scss
@@ -1,3 +1,11 @@
+.pages {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .section-title {
   margin-top: 1.5rem;
   margin-bottom: 0.5rem;
